added prometheus scrape port to service annotations

--- a/kubernetes/kube-state-metrics-service.yaml
+++ b/kubernetes/kube-state-metrics-service.yaml
@@ -7,6 +7,7 @@ metadata:
     k8s-app: kube-state-metrics
   annotations:
     prometheus.io/scrape: 'true'
+    prometheus.io/port: "8080"
 spec:
   ports:
   - name: http-metrics
